# py3nctx

./: .gitignore  CMakeLists.txt  LICENSE  README.md  setup.py
src/: core.cpp  directed.cpp  graphcontainertemplated.hpp  pythonmodule.hpp  undirected.cpp
src/nctx/: nctx.hpp
src/nctx/graph/: container.hpp
src/nctx/io/: io_operations.hpp
src/nctx/topology/: betweenness_centrality_ctx.hpp  closeness_centrality_ctx.hpp  ctx_bfs_visitor.hpp  dijkstra_ctx.hpp  page_rank_ctx.hpp
src/nctx/utils/: distances.hpp
src/python_cpp/: enable_type_object.hpp  hasher.hpp  is_container.hpp  iterable_converter.hpp  iterator_adjacent.hpp  iterator_base.hpp  iterator_edges.hpp  iterator_vertices.hpp  iterators.hpp  lambda_visitor.hpp  lambda_wrapper.hpp  property_map_holders.hpp  python_input_device.hpp
src/python_defs/: definitions_property_maps.hpp  wrap_algs_centralities.hpp  wrap_algs_shortest_path.hpp  wrap_distances.hpp  wrap_factories.hpp  wrap_io.hpp  wrap_iterators.hpp  wrap_propertymaps.hpp
tests/: bcde.ctx.graphml  bcde.directed.graphml  bcde.undirected.graphml  nctx_test.py
